# hackerrank-pass-baton

./: .gitignore  LICENSE  README.md  fourmolu.yaml  hackerrank.cabal  stack.yaml
src/: Baton.hs  Main.hs
tests/: test.hs
